* NEW terminal names now sorted alphabetically
* NEW "linetype palette" also for points
* NEW (incomplete) plotstyle "with filledcurves"
* NEW plot style "with filledboxes", controlled by new
  "set style filling" options (needs --enable-filledboxes)
* NEW "set boxwidth <number> relative"
* NEW options to FIG terminal driver
* NEW parse errors in datafile reading now show the culprit
* FIXED interaction of "set xtics <incr>"  with time/date axes
* FIXED candlesticks now ignore order of high/low entries
* FIXED keeping old arrow options if new "set" command modifies it
* FIXED undoing a mouse zoom that started from autoscaled axis
* FIXED contour line colours in pm3d's "linetype palette" mode
* FIXED PostScript stack pollution caused by "Symbol Oblique" patch
* FIXED warnings from perl -w in tkcanvas terminal output
* FIXED dgrid3d floating point exception
* FIXED logscaled colorbox axis
* FIXED pgnuplot for Windows NT/2K/XP

[3.8g]
* CHANGE use either two or five minitic steps, never 4 (in logscale)
* CHANGE reject candlesticks/financebars plots of to few colums --- warn
  and then plot with "points", instead
* NEW Hotkeys to access keyboard in MS Windows version
* NEW set style [data | function] filledcurves [options]
      plot ... with filledcurves [options]
* NEW autoscale options: `fix`, `keepfix`
* NEW some more fancy 3D demo plots
* NEW mouse support and PM3D are now enabled by default
* NEW more point symbol types in Windows terminal
* FIXED PostScript font reencoding for non-default fonts
* FIXED dgrid for logscaled axes
* FIXED tic generation for axes that have |min/max| very close to 1
* FIXED several "impossible" parse erros in "show" command.
* FIXED bounding box of PSLatex generated .eps files
* (attempted) FIX: X11 deadlocks caused by stdio buffering vs. select()
* FIXED baseline of "histeps" plots with logscaled or shifted y axis.
* FIXED document spherical coordinates by reference to latitude/longitude